# pokedex

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
notebooks/: filtering.ipynb
src/django/pokedex/: settings.py
src/djangoproject/api/: admin.py  api.py  models.py
src/djangoproject/api/migrations/: 0001_initial.py  0002_pokemon_pokemonspecies_pokemonstat_pokemontype_and_more.py  0002_pokemonspecies_pokemontype_and_more.py  0003_rename_is_default_pokemon_is_species_default.py
src/djangoproject/pokeapp/: admin.py  api.py  apps.py  datamodel.py  models.py  utils.py
src/djangoproject/pokeapp/management/commands/: common.py  deletepokeapi.py  importpokeapi.py
src/djangoproject/pokeapp/migrations/: 0001_initial.py  0002_pokemon_pokemonability_pokemonspecies_pokemonstat_and_more.py  0002_pokemon_pokemonspecies_pokemonstat_pokemontype_and_more.py  0002_superuser.py  0003_alter_pokemonevolutionchain_first_evolution.py  0003_pokemon_base_experience_pokemon_height.py  0003_pokemon_pokemonability_pokemonspecies_pokemonstat_and_more.py  0003_pokemonevolutionchain.py  0004_pokemonabilityvalue_unique_ability_value_and_more.py  0004_rename_is_species_default_pokemon_is_default.py  0005_pokemon_abilities.py  0005_pokemonability.py  0006_alter_pokemon_abilities.py  0006_alter_pokemonability_options_pokemon_abilities.py  0007_alter_pokemon_abilities.py  0007_rename_form_name_pokemonform_form_and_more.py  0008_alter_pokemon_abilities.py  0008_alter_pokemonstat_name.py
src/djangoproject/pokedex/: api.py  settings.py  urls.py
src/pokecore/: config.py  datamodel.py  pokeapi.py
src/pokecore/pokeapi/: client.py  datamodel.py
src/pokedex/: pokeapi.py  pokemon.py
src/pokedexcore/: pokeapi.py
src/work/: JS Course.docx  Mirek_ Django Pokedex Challenge - Code Review.docx  PR best practices.docx  food.xlsx  tabs.txt
